--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -16,6 +16,60 @@
     padding: 80px 0;
 }
 
+/* HEADER */
+header {
+    /* min-height: calc(100vh - 210px);  */
+}
+.header__container {
+    display: flex; 
+    position: relative;
+}
+
+.header__text {
+    width: 75%;
+    position: absolute;
+    top: 20%;
+    left: 10%;
+    z-index: 10;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header__title {
+    font-family: 'Big Shoulders Display';
+    font-size: 96px;
+    max-width: 450px;
+}
+
+.header__body {
+    display: flex;
+    max-width: 350px;
+    max-height: 160px;
+
+}
+
+.header__description--text {
+    font-family: 'Outfit';
+    font-size: 22px;
+    line-height: 32px;
+    color: #444444;
+}
+
+.header__img--wrapper {
+    height: 100vh;
+    width: 40%;
+}
+
+.header__panel {
+    background-color: #151515;
+    height: 100vh;
+    width: 30%;
+}
+
+.header__img{
+    height: 100%;
+    width: 100%;
+}
 
 /* FOOTER */
 footer {
