--- a/style.css
+++ b/style.css
@@ -23,14 +23,16 @@ header {
 }
 .header__container {
   display: flex;
-  position: relative;
+}
+
+.header__row {
+  margin: 0 -280px;
 }
 
 .header__text {
-  width: 65%;
+  width: 70%;
   position: absolute;
   top: 20%;
-  z-index: 10;
   display: flex;
   justify-content: space-between;
 }
@@ -40,6 +42,7 @@ header {
   font-size: 96px;
   max-width: 450px;
   mix-blend-mode: difference;
+  color: #ffffff;
 }
 
 .header__body {
@@ -59,10 +62,10 @@ header {
 .header__img--wrapper {
   height: 100vh;
   width: 40%;
+  background-color: white;
 }
 
 .header__panel {
-  position: relative;
   color: #ffffff;
   background-color: #151515;
   height: calc(100vh - 210px);
@@ -77,7 +80,7 @@ header {
   background-size: cover;
   background-position: center;
   box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
 }
 
 .header__button {
